# qtmir

./: .bzrignore  CMakeLists.txt  COPYING  README  TODO  deploy.sh  qtubuntu.pro
debian/: bileto_convert_to_gles  changelog  control  copyright  qtubuntu-desktop.install  qtubuntu-examples.install  qtubuntu.install  rules  watch
debian/gles-patches/: convert-to-gles.patch
demos/qml-demo-shell/: ResizeArea.qml  Window.qml  WindowControlButtons.qml  WindowDecoration.qml  WindowMoveResizeArea.qml  WindowView.qml  qml-demo-shell.qml  run.sh
examples/: Application.qml  Input.qml  Logo.qml  MovingLogo.qml  MultiTouch.qml  WarpingLogo.qml  examples.pro  hybrisqmlscene.cc  hybrisqmlscene.cpp  hybrisqmlscene.h  qmlscene_ubuntu.cc  qmlscene_ubuntu.h
scripts/: maguro_deploy.sh  maguro_env.sh  phablet_deploy.sh  qt5_env.sh  qt5_legacy_env.sh
src/: lttng-compiler.pri  src.pro
src/base/: backing_store.cc  backing_store.h  base.pro  context.cc  context.h  input.cc  input.h  integration.cc  logging.h  native_interface.cc  screen.cc  screen.h  window.cc
src/common/: debughelpers.cpp  globals.h  timestamp_impl.h
src/hybris/: hybris.pro  input.cc  integration.cc  integration.h  main.cc  screen.cc  screen.h  window.cc  window.h
src/hybrislegacy/: hybrislegacy.pro  input.cc  input.h  integration.cc  integration.h  main.cc  screen.cc  screen.h  (+2 more)
tests/: Application.qml  Fullscreen.qml  Input.qml  InputFilter.qml  Logo.qml  MovingLogo.qml  TextInput.qml  WarpingLogo.qml  tests.pro
tests/mirserver/ScreenModel/: CMakeLists.txt  screenmodel_test.cpp  testable_screenmodel.h
(+180 files in other folders)
